Fix spacing on footer list, make input smaller and centered

--- a/src/output.css
+++ b/src/output.css
@@ -565,6 +565,9 @@
   .-mt-14 {
     margin-top: calc(var(--spacing) * -14);
   }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
+  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -609,6 +612,12 @@
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
+  }
+  .max-w-1 {
+    max-width: calc(var(--spacing) * 1);
+  }
+  .max-w-1\/2 {
+    max-width: calc(1/2 * 100%);
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
@@ -875,6 +884,11 @@
   .md\:mx-0 {
     @media (width >= 48rem) {
       margin-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:mt-0 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 0);
     }
   }
   .md\:mb-0 {
